Fixed spacing for event cards, added hover effects for navbar

--- a/src/App.css
+++ b/src/App.css
@@ -3,21 +3,27 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
+}
+
+nav button {
+  padding: 1rem;
+  border: 2px solid rgba(0, 0, 0, 0.3);
+  border-radius: 0.2em;
+  background-color: transparent;
+  cursor: pointer;
+  transition:
+    opacity 0.3s ease-out,
+    color 0.3s ease-out,
+    border-color 0.3s ease-out;
+}
+
+nav button:hover {
+  opacity: 0.6;
+  color: red;
+  /* background-color: red; */
+  border-color: rgba(255, 255, 255, 1);
 }
